# python-package-practice

./: LICENSE  README.md  pyproject.toml
docs/: conf.py  example.ipynb
src/newPyCountsMDS/: __init__.py
tests/: test_pycounts.py
