[tool.poetry]
name = "pycounts"
version = "0.1.0"
description = "Calculate word counts in a text file!"
authors = ["Michael Suriawan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13.1"
matplotlib = ">=3.10.0"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
